@@ -4,17 +4,20 @@ import com.juliusramonas.beertest.component.Haversine;
 import com.juliusramonas.beertest.component.advice.TrackExecutionTime;
 import com.juliusramonas.beertest.config.properties.WaypointsConfigurationProperties;
 import com.juliusramonas.beertest.dao.model.Brewery;
+import com.juliusramonas.beertest.service.mapper.WaypointDataMapper;
+import com.juliusramonas.beertest.service.model.Point;
+import com.juliusramonas.beertest.service.model.WaypointData;
 import jakarta.transaction.Transactional;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
-import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 @Slf4j
@@ -25,120 +28,103 @@ public class WaypointService {
     private final BreweryService breweryService;
     private final Haversine haversine;
     private final WaypointsConfigurationProperties properties;
-
-//    @PostConstruct
-//    public void test() {
-//        final var calculatedWaypoints = calculateWaypoints(51.355468, 11.100790);
-//
-//        log.info("Tour size: " + calculatedWaypoints.size());
-//    }
+    private final WaypointDataMapper waypointDataMapper;
 
     @TrackExecutionTime
-    public List<Brewery> calculateWaypoints(final Double latitude, final Double longitude) {
+    public List<WaypointData> calculateWaypoints(final Double latitude, final Double longitude) {
         final var boundary = haversine.getBoundaries(latitude, longitude, properties.maxDistance() / 2);
         final var breweries = breweryService.getBreweriesInBoundary(boundary);
 
         if (breweries.isEmpty()) {
-            log.info("No breweries found in the boundary for coordinates:[%f,%f]".formatted(latitude, longitude));
+            log.info("No breweries found in the boundary for coordinates:[%f,%f]".formatted(latitude,
+                    longitude));
             return Collections.emptyList();
         }
 
-        final Point startPoint = new Point(-1L, latitude, longitude);
+        final Point startPoint = new Point(-1L, latitude, longitude, 0.0, 0.0, 0);
 
         final Map<Long, Brewery> breweryMap = new HashMap<>();
         final List<Point> allPoints = new ArrayList<>();
 
         breweries.forEach(brewery -> {
             breweryMap.put(brewery.getId(), brewery);
-            allPoints.add(new Point(brewery.getId(), brewery.getGeoCode()
-                                                            .getLatitude(), brewery.getGeoCode()
-                                                                                   .getLongitude()));
+            allPoints.add(new Point(brewery.getId(), brewery.getGeoCode().getLatitude(),
+                    brewery.getGeoCode().getLongitude(), 0.0, 0.0, brewery.getBeers().size()));
         });
 
         final List<List<Point>> allTours = new ArrayList<>();
         exploreTours(startPoint, allPoints, allTours, new ArrayList<>(), 0);
 
         return allTours.stream()
-                       .filter(tour -> calculateTourDistance(tour) <= properties.maxDistance())
-                       .max(Comparator.comparingInt(List::size))
-                       .stream()
-                       .flatMap(points -> mapToBrewery(points, breweryMap))
-                       .collect(Collectors.toList());
+                .max(Comparator.comparingInt(tour -> tour.stream().mapToInt(Point::getBeerCount).sum()))
+                .map(tour -> mapToWaypointData(tour, breweryMap))
+                .orElse(Stream.empty())
+                .toList();
     }
 
-    private Stream<Brewery> mapToBrewery(final List<Point> tour, final Map<Long, Brewery> breweryMap) {
-        return tour.stream()
-                   .map(point -> breweryMap.get(point.getId()));
-    }
 
-    private void exploreTours(final Point current, final List<Point> remainingPoints, final List<List<Point>> allTours,
-                              final List<Point> currentTour, final double currentDistance) {
+    private void exploreTours(final Point current, final List<Point> remainingPoints,
+            final List<List<Point>> allTours, final List<Point> currentTour,
+            final double currentDistance) {
         if (allTours.size() > properties.maxTourSize()) {
             return;
         }
 
         final List<Point> closestPoints = remainingPoints.stream()
-                                                         .sorted(getDistanceComparator(current))
-                                                         .limit(properties.closestPointLimit())
-                                                         .filter(point -> currentDistance + getDistance(current,
-                                                                 currentTour.isEmpty() ? current : currentTour.get(0)) +
-                                                                 getDistance(current, point) <
-                                                                 properties.maxDistance())
-                                                         .toList();
+                .sorted(getDistanceComparator(current))
+                .limit(properties.closestPointLimit())
+                .sorted((o1, o2) -> Integer.compare(o2.getBeerCount(), o1.getBeerCount()))
+                .limit(properties.mostBeersLimit())
+                .filter(point -> doesNotExceedMaxDistance(current, currentTour, currentDistance, point))
+                .toList();
 
         if (closestPoints.isEmpty()) {
             final double distanceToStart = getDistance(current, currentTour.get(0));
             if (!currentTour.isEmpty() && currentDistance + distanceToStart <= properties.maxDistance()) {
                 currentTour.add(currentTour.get(0));
+                currentTour.get(currentTour.size() - 1).setDistanceTraveled(currentDistance + distanceToStart);
+                currentTour.get(currentTour.size() - 1).setDistanceToPreviousPoint(distanceToStart);
                 allTours.add(new ArrayList<>(currentTour));
             }
             return;
         }
 
         for (final Point point : closestPoints) {
-            final double distanceToNewStart = getDistance(point, currentTour.isEmpty() ? current : currentTour.get(0));
-            final double newDistance = currentDistance + getDistance(current, point);
-            if (newDistance + distanceToNewStart <= properties.maxDistance()) {
-                final List<Point> newRemainingPoints = new ArrayList<>(remainingPoints);
-                newRemainingPoints.remove(point);
-                final List<Point> newCurrentTour = new ArrayList<>(currentTour);
-                newCurrentTour.add(current);
-                exploreTours(point, newRemainingPoints, allTours, newCurrentTour, newDistance);
-            } else if (!currentTour.isEmpty() && !currentTour.get(0)
-                                                             .getId()
-                                                             .equals(-1L)) {
-                currentTour.add(currentTour.get(0));
-                allTours.add(new ArrayList<>(currentTour));
-            }
+            final double distanceBetweenPoints = getDistance(current, point);
+            final double newDistance = currentDistance + distanceBetweenPoints;
+            final List<Point> newRemainingPoints = new ArrayList<>(remainingPoints);
+            newRemainingPoints.remove(point);
+            final List<Point> newCurrentTour = new ArrayList<>(currentTour);
+            newCurrentTour.add(current);
+            point.setDistanceTraveled(newDistance);
+            point.setDistanceToPreviousPoint(distanceBetweenPoints);
+            exploreTours(point, newRemainingPoints, allTours, newCurrentTour, newDistance);
         }
     }
 
-    private double calculateTourDistance(final List<Point> tour) {
-        double distance = 0.0;
-        for (int i = 1; i < tour.size(); i++) {
-            distance += getDistance(tour.get(i - 1), tour.get(i));
-        }
-
-        if (!tour.isEmpty()) {
-            distance += getDistance(tour.get(tour.size() - 1), tour.get(0));
-        }
-        return distance;
+    private boolean doesNotExceedMaxDistance(final Point current, final List<Point> currentTour,
+            final double currentDistance, final Point point) {
+        final var distanceNewPointAndStart = getDistance(point,
+                currentTour.isEmpty() ? current : currentTour.get(0));
+        final var distanceBetweenPoints = getDistance(current, point);
+        return currentDistance + distanceNewPointAndStart + distanceBetweenPoints
+                < properties.maxDistance();
     }
 
     private Double getDistance(final Point point1, final Point point2) {
-        return haversine.calculateDistance(point1.getLat(), point1.getLon(), point2.getLat(), point2.getLon());
+        return haversine.calculateDistance(point1.getLat(), point1.getLon(), point2.getLat(),
+                point2.getLon());
     }
 
     private Comparator<Point> getDistanceComparator(final Point point) {
         return Comparator.comparingDouble(p -> getDistance(p, point));
     }
 
-    @AllArgsConstructor
-    @Setter
-    @Getter
-    private static class Point {
-        private Long id;
-        private Double lat;
-        private Double lon;
+    private Stream<WaypointData> mapToWaypointData(final List<Point> tour,
+            final Map<Long, Brewery> breweryMap) {
+        return tour.stream().map(
+                point -> waypointDataMapper.breweryAndPointToWaypointData(breweryMap.get(point.getId()),
+                        point));
     }
+
 }
